add comment header

--- a/index.html
+++ b/index.html
@@ -73,8 +73,41 @@
             </div>
 
             <div class="secondary-info">
-                Sec info
+                <div class="secondary-info-top-bar">
+                    <div class="channel-logo-container">
+                        <img class="channel-logo" src="assets/channel-logo.jpeg" alt="channel-logo">
+                    </div>
+                    
+                    <div class="channel-name">
+                        앤뮤직 ANN MUSIC
+                    </div>
+                    <button class="subscribe-btn">
+                        SUBSCRIBE
+                    </button>
+                </div>
+
+                <div class="secondary-info-desc">
+                    CAMO - Life is Wet (feat. JMIN) <a href="/">0:00</a> <br>
+                    CAMO - Wifey (feat. 사이먼 도미닉) <a href="/">3:06</a> <br>
+                    OSSH - FAKE (Feat. CAMO) <a href="/">5:11</a>
+
+                    <div class="more-btn">SHOW MORE</div>
+                </div>
             </div>
+
+            <div class="comments-header">
+                <div class="comments-info">
+                    <div class="comments-info-summary">38 Comments</div>
+                    <i class="material-icons icon" id="sort-icon">sort</i>
+                    <div class="sort-icon-label">SORT BY</div>
+                </div>
+                <div class="comments-input">
+                    <i class="material-icons icon" id="account-icon-2">account_circle</i>
+                    <input placeholder="Add a public comment..." class="comment-box" type="text">
+                </div>
+            </div>
+
+
         </div>
 
         <div class="right-container">
