add some media query

--- a/index.html
+++ b/index.html
@@ -163,7 +163,20 @@
         </div>
 
         <div class="right-container">
-            right
+            <div class="watch-next">
+                <img class="watch-next-thumbnail" src="assets/thumbnail-1.webp" alt="Trippie Redd - Miss The Rage Ft. Playboi Carti & Mario Judah Mashup (With reversed intro) thumbnail img">
+                <div class="watch-next-summary">
+                    <div class="watch-next-title">
+                        Trippie Redd - Miss The Rage Ft. Playboi Carti & Mario Judah Mashup (With reversed intro)
+                    </div>
+                    <div class="watch-next-channel">
+                        激怒Kxiju
+                    </div>
+                    <div class="watch-next-metadata">
+                        <span>5.4M views</span> <span class="separator">&bull;</span> <span>7 months ago</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
