--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="container">
         <div class="left-container">
-            <iframe class="video" onload="resizeIframe(this)" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1" ></iframe>
+            <iframe class="video" onload="resizeIframe(this)" src="https://www.youtube.com/embed/Xci8GdAqmvU?autoplay=1&mute=1" ></iframe>
             <div class="primary-info">
                 <div class="super-title">
                     <a class="link-tags" spellcheck="false" href="https://www.youtube.com/hashtag/%EC%B9%B4%EB%AA%A8">#카모</a>
